# dash-eda

./: README.md  app.py  pyproject.toml
dashboard/: __init__.py  app.py  layout.py
dashboard/callbacks/: __init__.py  charts.py  data.py  features.py  modeling.py  preprocessing.py
dashboard/components/: __init__.py  cards.py  header.py
eda_core/: __init__.py  analysis.py  api.py  charts.py  cli.py  features.py  modeling.py  preprocessing.py
tests/: conftest.py  test_analysis.py  test_api.py  test_features.py  test_modeling.py  test_preprocessing.py
