[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dash-eda"
version = "0.2.0"
description = "Enterprise-grade Exploratory Data Analysis dashboard built with Dash and Mantine"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Dash EDA Contributors" }]
keywords = ["dash", "eda", "data-analysis", "plotly", "pandas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "dash>=4.1.0",
    "dash-mantine-components>=2.6.1",
    "dash-ag-grid>=35.2.0",
    "plotly>=6.6.0",
    "pandas>=3.0.2",
    "openpyxl>=3.1.5",
    "flask-caching>=2.3.1",
    "click>=8.1.6",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "joblib>=1.4.0",
]

[project.scripts]
eda = "eda_core.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eda_core*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
